modifying home page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">GeoReality</string>
+    <string name="app_name" translatable="false">GeoReality</string>
+    <string name="burger_menu_title">Open drawer</string>
 </resources>
