--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="login_email_button">Sign-in with email</string>
     <string name="login_anon_button">Login as a guest</string>
     <string name="login_signup_button">Sign-up</string>
+    <string name="nav_menu_item_logout">Logout</string>
 </resources>
