--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -10,4 +10,10 @@
     <string name="login_anon_button">Kirjaudu sisään vieraana</string>
     <string name="login_signup_button">Rekisteröidy</string>
     <string name="nav_menu_item_logout">Logout</string>
+    <string name="title">Title</string>
+    <string name="type">Type</string>
+    <string name="cache_type">Cache type</string>
+    <string name="create_a_new_cache">Create a new cache</string>
+    <string name="type_switch">Switch</string>
+    <string name="save">Save</string>
 </resources>
