--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="record">Record</string>
     <string name="_00_00">00:00</string>
     <string name="stop">Stop</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ar_type_2d">2D text</string>
+    <string name="ar_type_3d">3D model</string>
+    <string name="ar_text">Text to be inserted</string>
 
 </resources>
