--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -18,7 +18,7 @@
     <string name="save">Save</string>
     <string name="audio">Audio</string>
     <string name="recording">Äänitä</string>
-    <string name="record">Record</string>
+    <string name="audio_record">Record</string>
     <string name="_00_00">00:00</string>
     <string name="stop">Stop</string>
     <string name="ar_type_2d">2D teksti</string>
@@ -26,4 +26,8 @@
     <string name="ar_text">Tekstiä blaa</string>
     <string name="_2d_text">2D Text</string>
     <string name="info">Info</string>
+    <string name="audio_recording">Nauhoitetaan...</string>
+    <string name="audio_play">Toista</string>
+    <string name="audio_new">Uusi</string>
+    <string name="audio_stop">Lopeta</string>
 </resources>
