added cacheEntityFragment, data passing between fragments

--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -31,4 +31,5 @@
     <string name="audio_new">Uusi</string>
     <string name="audio_stop">Lopeta</string>
     <string name="log_out">Log out</string>
+    <string name="cache_entity_button">Avaa kätkö</string>
 </resources>
