--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -32,4 +32,5 @@
     <string name="audio_stop">Lopeta</string>
     <string name="log_out">Log out</string>
     <string name="cache_entity_button">Avaa kätkö</string>
+    <string name="map_info_window_open_ar">Avaa kätkö</string>
 </resources>
