--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,18 +13,18 @@
     <string name="type">Type</string>
     <string name="cache_type">Cache type</string>
     <string name="create_a_new_cache">Create a new cache</string>
-    <string name="ar">AR</string>
+    <string name="ar" translatable="false">AR</string>
     <string name="save">Save</string>
-    <string name="audio">Audio</string>
+    <string name="audio" translatable="false">Audio</string>
     <string name="recording">Recording</string>
     <string name="audio_record">Record</string>
     <string name="_00_00">00:00</string>
-    <string name="stop">Stop</string>
+    <string name="stop" translatable="false">Stop</string>
     <string name="ar_type_2d">2D text</string>
     <string name="ar_type_3d">3D model</string>
-    <string name="ar_text">Text to be inserted</string>
-    <string name="_2d_text">2D Text</string>
-    <string name="info">Info</string>
+    <string name="ar_text">Write text to be displayed in model</string>
+    <string name="_2d_text" translatable="false">2D Text</string>
+    <string name="info" translatable="false">Info</string>
     <string name="audio_recording">Recording...</string>
     <string name="audio_play">Play audio</string>
     <string name="audio_new">New</string>
@@ -48,5 +48,6 @@
     <string name="cache_model_avocado">Avocado</string>
     <string name="model1_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf</string>
     <string name="model2_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf</string>
+    <string name="coordinate_string">Latitude: %1s, longitude: %2s</string>
 
 </resources>
