--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,14 +31,14 @@
     <string name="audio_stop">Stop</string>
     <string name="log_out">Log out</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="nav_menu_item_info" translatable="false">Info</string>
     <string name="cache_entity_title" translatable="false">title</string>
     <string name="cache_entity_creator" translatable="false">creator</string>
     <string name="cache_entity_type" translatable="false">type</string>
     <string name="cache_entity_button">Open cache</string>
     <string name="cache_entity_AR_type" translatable="false">AR cache</string>
-    <string name="cache_entity_audio_type">Audio cache</string>
+    <string name="cache_entity_audio_type" translatable="false">Audio cache</string>
     <string name="map_info_window_open_ar">Open cache</string>
     <string name="cache_dialog_title">Opening cache</string>
     <string name="cache_dialog_message">You are about to open a cache. Do you want to proceed?</string>
@@ -48,6 +48,11 @@
     <string name="cache_model_avocado">Avocado</string>
     <string name="model1_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf</string>
     <string name="model2_url" translatable="false">https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Avocado/glTF/Avocado.gltf</string>
-    <string name="coordinate_string">Latitude: %1s, longitude: %2s</string>
+    <string name="coordinate_string">Latitude: %1$s, longitude: %2$s</string>
+    <string name="info_fragment_title">Information</string>
+    <string name="info_fragment_preview">Welcome to GeoReality! The main feature of this application is the map. The map tracks your location at all times so you don\'t get lost! The objective is to discover caches. They are shown as red and blue markers on the map.</string>
+    <string name="info_fragment_red_desc">The red marker is an AR marker. It contains a cache with alternate reality features.</string>
+    <string name="info_fragment_blue_desc">The blue marker is an audio marker. It contains a cache with an audio recording that another person recorded.</string>
+    <string name="info_fragment_infowindow_desc">Clicking on a marker will display an info window. The info window tells you if you are close enough to the cache to open it.  Clicking on a close enough cache\'s info window will open up the cache.</string>
 
 </resources>
