--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -47,4 +47,5 @@
     <string name="useremail">Käyttäjänsähköposti</string>
     <string name="email">Sähköposti</string>
     <string name="exit_cache">Exit Cache</string>
+    <string name="distanceText">Olet liian kaukana! Alle %1$s metriä niin voit avata kätkön.</string>
 </resources>
